syntax = "proto3";

package front.service.v1;


import "gnostic/openapi/v3/annotations.proto";
import "google/api/annotations.proto";
import "google/protobuf/empty.proto";

import "user/service/v1/user.proto";

// 用户APP登陆认证服务
service AuthenticationService {
  // APP登陆
  rpc Login (LoginRequest) returns (LoginResponse) {
    option (google.api.http) = {
      post: "/blog/v1/login"
      body: "*"
    };

    option(gnostic.openapi.v3.operation) = {
      security: {}
    };
  }

  // APP登出
  rpc Logout (LogoutRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/blog/v1/logout"
      body: "*"
    };
  }

  // APP获取已经登陆的用户的数据
  rpc GetMe (GetMeRequest) returns (user.service.v1.User) {
    option (google.api.http) = {
      get: "/blog/v1/me"
    };
  }
}

// 用户APP登陆 - 请求
message LoginRequest {
  string username = 1 [json_name = "username"]; // 用户名
  string password = 2 [json_name = "password"]; // 密码
  optional string grandType = 3 [json_name = "grand_type"]; // 授权类型，一直为：password
}
// 用户APP登陆 - 回应
message LoginResponse {
  uint32 id = 1; // 用户ID
  string username = 2 [json_name = "username"];// 用户名
  string tokenType = 3 [json_name = "token_type"]; // 令牌类型
  string accessToken = 4 [json_name = "access_token"]; // 访问令牌
  string refreshToken = 5 [json_name = "refresh_token"]; // 刷新令牌
}

// 用户APP登出 - 请求
message LogoutRequest {
  uint32 id = 1;
}

// 获取当前用户信息 - 请求
message GetMeRequest {
  uint32 id = 1;
}
